# recall-memory

./: .gitignore  CONTEXT_MODES.md  PRODUCT.md  README.md  REAL_MODEL_E2E.md  RELEASE.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: release-macos.yml
e2e/: app.spec.ts
scripts/: create-updater-manifest.mjs  prepare-sidecar.mjs  tauri-build.mjs
src/: App.tauri.test.tsx  App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: evolution-mcp-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/fixtures/: claude_redacted.jsonl  codex_redacted.jsonl
src-tauri/proptest-regressions/: scanner.txt
src-tauri/src/: lib.rs  main.rs  mcp.rs  models.rs  paths.rs  reflection.rs  scanner.rs  store.rs  watcher.rs
src/lib/: runtime.ts  types.ts
